# wordle

./: Makefile  main.py  pyproject.toml
source/: dataclass.py  word_list.py
tests/: test_main.py
