[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["socar-dini <dini@socar.kr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pytest = "^6.2.5"
pycln = "^1.1.0"
black = "^22.1.0"
isort = "^5.10.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
